# caliptra-sw

./: .gitignore  .gitmodules  BRANCHING_STRATEGY.md  CHANGELOG.md  CODEOWNERS  Cargo.toml  DPE_Context_Update_Proposal.md  FROZEN_IMAGES.sha384sum  README.md  SECURITY.md  SUMMARY.md  book.toml  build.rs  build.sh  ci.sh  cross.sh  repo_setup.sh  runtime_firmware.md  rust-toolchain.toml  setup_fpga.sh  stack_usage.sh  test.sh
acvp/: Cargo.toml
acvp/src/: lib.rs
api/: Cargo.toml
api/src/: capabilities.rs  checksum.rs  lib.rs  mailbox.rs  soc_mgr.rs
api/test-fw/: Cargo.toml  build.rs
api/types/: Cargo.toml
auth-manifest/app/: Cargo.toml
auth-manifest/types/: Cargo.toml
builder/: Cargo.toml  README.md  no_meta_rustc_wrapper.sh
builder/src/: elf_symbols.rs  firmware.rs  lib.rs  release_artifacts.rs  sha256.rs  version.rs
builder/test_data/: default_image_options.toml
cfi/lib/: Cargo.toml
ci-tools/bitstream-downloader/: Cargo.toml  README.md
ci-tools/fpga-boss/: .gitignore  Cargo.toml  README.md  flake.nix
ci-tools/size-history/: Cargo.toml
ci-tools/test-matrix/: Cargo.toml  README.md
common/: Cargo.toml
common/eat/: Cargo.toml  README.md
common/okref/: Cargo.toml
common/src/: boot_status.rs  capabilities.rs  checksum.rs  crypto.rs  debug_unlock.rs  dice.rs  env.rs  error.rs  error_handler.rs  fips.rs  fuse.rs  hand_off.rs  helpers.rs  hmac_cm.rs  keyids.rs  lib.rs  macros.rs  mailbox.rs  mailbox_api.rs  measurement.rs  memory_layout.rs  pcr.rs  pmp.rs  printer.rs  uds_fe_programming.rs  verifier.rs  verify.rs  wdt.rs  x509.rs
coverage/: Cargo.toml
coverage/src/: disasm.rs  lib.rs  main.rs
cpu/: Cargo.toml  build.rs  build.sh  link.x
cpu/src/: csr.rs  exception.rs  lib.rs  nmi.S  printer.rs  start.S  trap.S  trap.rs
doc/: fmc.md  (+9 more)
drivers/: Cargo.toml  build.rs
drivers/.cargo/: config.toml
drivers/fuzz/: Cargo.toml
drivers/src/: abr.rs  aes.rs  array.rs  array_concat.rs  bounded_address.rs  cmac_kdf.rs  csrng.rs  data_vault.rs  dma.rs  doe.rs  ecc384.rs  emu_ctrl.rs  error.rs  error_reporter.rs  exit_ctrl.rs  fips_test_hooks.rs  fuse_bank.rs  fuse_log.rs  hand_off.rs  hkdf.rs  hmac.rs  hmac384.rs  hmac384_kdf.rs  hmac_kdf.rs  idevid_csr.rs  key_vault.rs  kv_access.rs  lib.rs  lms.rs  mailbox.rs  memory_layout.rs  ml_dsa87.rs  ml_kem.rs  mldsa87.rs  needs_kat.rs  ocp_lock.rs  okref.rs  pcr_bank.rs  pcr_log.rs  pcr_reset.rs  (+26 more)
drivers/test-acvp/: Cargo.toml  README.md
drivers/test-fw/: Cargo.toml  build.rs  build.sh  test.sh
drivers/tests/: doe_tests.rs  ecc384_tests.rs  hmac384_tests.rs  integration_tests.rs  keyvault_tests.rs  mailbox_tests.rs  pcrbank_tests.rs  sha1_tests.rs  sha256_tests.rs  sha384_tests.rs  sha384acc_tests.rs  start.S  status_reporter_tests.rs
error/: Cargo.toml  README.md
error/src/: lib copy.rs  lib.rs
fmc/: Cargo.toml  Makefile  Makefile.toml  README.md  build.rs  build.sh  foo.rs  link.x  memory.x
fmc/src/: boot_status.rs  error.rs  fmc_env.rs  fmc_env_cell.rs  hand_off.rs  lib.rs  main.rs  start.S  transfer_control.S
fmc/test-rom/: Cargo.toml  Makefile.toml  build.rs  build.sh  link.x  memory.x  out.txt
fmc/test-suite/: Cargo.toml
fmc/tests/: test_hand_off.rs  test_rtalias.rs
fmc/tools/: keys.toml
hw-model/: Cargo.toml  build.rs
hw-model/c-binding/: Cargo.toml  build.rs  caliptra_model.h  cbindgen.toml  template.rs  test_case.c
hw-model/examples/: caliptra_model.h
hw-model/heavy-test-fw/: Cargo.toml  build.rs
hw-model/src/: bmc.rs  bus_logger.rs  cfg.rs  flash_image.rs  fpga_regs.rs  jtag.rs  keys.rs  lcc.rs  lib.rs  mcu_boot_status.rs  mmio.rs  model_emulated.rs  model_fpga_realtime.rs  model_fpga_subsystem.rs  model_verilated.rs  otp_digest.rs  otp_provision.rs  output.rs  recovery.rs  rv32_builder.rs  soc_flows.rs
hw-model/test-fw/: Cargo.toml  build.rs  mailbox_responder.rs  mailbox_sender.rs  mcu_hitless_update_flow.rs  test_dccm_double_bit_ecc.rs  test_iccm_byte_write.rs  test_iccm_double_bit_ecc.rs  test_iccm_unaligned_write.rs  test_iccm_write_locked.rs  test_imprecise_bus_fault.rs  test_invalid_instruction.rs  test_pcr_extend.rs  test_system_bus_invalid_access.rs  test_uninitialized_read.rs  test_write_to_rom.rs  test_write_unmapped_address.rs  test_zbb.rs
hw-model/tests/: model_tests.rs  multi_version_tests.rs
hw-model/types/: Cargo.toml
kat/: Cargo.toml
kat/src/: aes256cbc_kat.rs  aes256cmac_kat.rs  aes256ctr_kat.rs  aes256ecb_kat.rs  aes256gcm_kat.rs  cmackdf_kat.rs  crypto_kat.rs  csrng_kat.rs  ecc384_kat.rs  ecdh_kat.rs  error.rs  hkdf_kat.rs  hmac384_kat.rs  hmac384kdf_kat.rs  hmac_kdf_kat.rs  kats_env.rs  lib.rs  lms_kat.rs  mldsa87_kat.rs  sha1_kat.rs  sha256_kat.rs  sha2_512_384acc_kat.rs  sha384_kat.rs  sha384acc_kat.rs  sha3_kat.rs  sha512_kat.rs
lms-types/: Cargo.toml
lms-types/src/: lib.rs
registers/: Cargo.toml  README.md  build.rs  update.sh
registers/src/: csrng.rs  doe.rs  dv.rs  ecc.rs  el2_pic_ctrl.rs  entropy_src.rs  hmac.rs  kv.rs  lib.rs  mbox.rs  pv.rs  sha256.rs  sha512.rs  sha512_acc.rs  soc_ifc.rs  soc_ifc_trng.rs  spi_host.rs  uart.rs
runtime/: Cargo.toml  Makefile  README.md  bloat.sh  build.rs  build.sh  link.x  memory.x
runtime/doc/: test-coverage.md
runtime/src/: activate_firmware.rs  authorize_and_stash.rs  caliptra_crypto.rs  caliptra_platform.rs  capabilities.rs  certify_key_chunks.rs  certify_key_extended.rs  certify_key_extended_mldsa.rs  compatibility.rs  crypto.rs  cryptographic_mailbox.rs  debug_unlock.rs  dice.rs  disable.rs  dpe_crypto.rs  dpe_platform.rs  drivers.rs  error.rs  ext_intr.S  fe_programming.rs  fe_zeroization.rs  fips.rs  firmware_verify.rs  get_attested_csr.rs  get_fmc_alias_csr.rs  get_idev_csr.rs  get_image_info.rs  get_mcu_fw_size.rs  get_owner_pub_key_hash.rs  get_pq_csr.rs  get_pq_info.rs  handoff.rs  hmac.rs  info.rs  invoke_dpe.rs  invoke_dpe_mldsa.rs  key_ladder.rs  lib.rs  mailbox.rs  (+28 more)
test/: Cargo.toml  README.md
test-harness/: Cargo.toml
wasm-demo/: .gitignore  Cargo.toml  build-wasm.sh
x509/: Cargo.toml  README.md
xtask/: Cargo.toml  README.md
zero_bin/: Cargo.toml  build.rs
(+1468 files in other folders)
