# Licensed under the Apache-2.0 license

[workspace]

# Use dependency resolver v2 to allow [dev-dependencies] to have different
# features from [dependencies]. See
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

exclude = [
  # Uses a custom .cargo/config
  "sw-emulator/example",
]

members = [
  "builder",
  "ci-tools/file-header-fix",
  "ci-tools/size-history",
  "common",
  "cpu",
  "drivers",
  "drivers/test-fw",
  "fmc",
  "fmc/test-fw/test-rt",
  "hw-latest/verilated",
  "hw-model",
  "hw-model/test-fw",
  "hw-model/types",
  "hw-model/c-binding",
  "registers",
  "registers/bin/generator",
  "runtime",
  "runtime/test-fw",
  "sw-emulator/app",
  "sw-emulator/compliance-test",
  "sw-emulator/lib/cpu",
  "sw-emulator/lib/crypto",
  "sw-emulator/lib/derive",
  "sw-emulator/lib/periph",
  "sw-emulator/lib/types",
  "systemrdl",
  "ureg/lib/schema",
  "ureg/lib/codegen",
  "ureg/lib/systemrdl",
  "x509",
  "kat",
  "image/types",
  "image/gen",
  "image/serde",
  "image/verify",
  "image/app",
  "image/openssl",
  "image/elf",
  "image/fake-keys",
  "lms-types",
  "rom/dev",
  "rom/dev/tools/test-fmc",
  "rom/dev/tools/test-rt",
  "test",
  "test-harness",
  "test-harness/types",
]

[profile.firmware]
inherits = "release"
panic = "abort"
lto = true
opt-level = "s"
codegen-units = 1

# Always optimize the emulator during tests, as it is a major bottleneck for
# test speed.
[profile.test.package.caliptra-emu-bus]
opt-level = 3
[profile.test.package.caliptra-emu-cpu]
opt-level = 3
[profile.test.package.caliptra-emu-crypto]
opt-level = 3
[profile.test.package.caliptra-emu-periph]
opt-level = 3
[profile.test.package.caliptra-emu-types]
opt-level = 3
[profile.test.package.caliptra-hw-model]
opt-level = 3
[profile.test.package.tock-registers]
opt-level = 3
[profile.test.package.caliptra-drivers]
opt-level = 3
