# Licensed under the Apache-2.0 license

[workspace]

# Use dependency resolver v2 to allow [dev-dependencies] to have different
# features from [dependencies]. See
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

exclude = [
  # Uses a custom .cargo/config
  "sw-emulator/example",
  "dpe/dpe",
  "dpe/crypto",
  "dpe/platform",
  "dpe/simulator",
  "dpe/tools",

  # fpga-boss depends on crates with annoying system deps like libusb and
  # libftdi, so keep it in its own workspace
  "ci-tools/fpga-boss",

  # test-matrix depends on octocrab (github API), which is very heavyweight.
  "ci-tools/test-matrix",
]

members = [
  "api",
  "builder",
  "cfi/lib",
  "cfi/derive",
  "ci-tools/file-header-fix",
  "ci-tools/size-history",
  "common",
  "coverage",
  "cpu",
  "drivers",
  "drivers/test-fw",
  "drivers/test-fw/scripts/vector_gen",
  "fmc",
  "fmc/test-fw/test-rt",
  "hw/1.0/registers",
  "hw/latest/registers",
  "hw/verilated",
  "hw-model",
  "hw-model/test-fw",
  "hw-model/types",
  "hw-model/c-binding",
  "registers",
  "registers/bin/generator",
  "runtime",
  "runtime/test-fw",
  "sw-emulator/app",
  "sw-emulator/compliance-test",
  "sw-emulator/lib/cpu",
  "sw-emulator/lib/crypto",
  "sw-emulator/lib/derive",
  "sw-emulator/lib/periph",
  "sw-emulator/lib/types",
  "systemrdl",
  "ureg/lib/schema",
  "ureg/lib/codegen",
  "ureg/lib/systemrdl",
  "x509",
  "kat",
  "image/types",
  "image/gen",
  "image/serde",
  "image/verify",
  "image/app",
  "image/openssl",
  "image/elf",
  "image/fake-keys",
  "lms-types",
  "rom/dev",
  "rom/dev/tools/test-fmc",
  "rom/dev/tools/test-rt",
  "test",
  "test-harness",
  "test-harness/types",
]

[workspace.dependencies]
aes = "0.8.2"
anyhow = "1.0.70"
arbitrary = { version = "1.3.0", features = ["derive"] }
arrayref = "0.3.6"
arrayvec = { version = "0.7.4", default-features = false }
asn1 = "0.13.0"
bitfield = "0.14.0"
bitflags = "2.4.0"
bit-vec = "0.6.3"
caliptra-api = { path = "api" }
caliptra-cfi-lib = { path = "cfi/lib", default-features = false, features = ["cfi", "cfi-counter" ] }
caliptra-cfi-derive = { path = "cfi/derive" }
caliptra-cfi-lib-git = { git = "https://github.com/chipsalliance/caliptra-cfi.git", package = "caliptra-cfi-lib-git", rev = "9f315fcf11fe006e95e62149f54f98620e5244e7", default-features = false, features = ["cfi", "cfi-counter" ] }
caliptra-cfi-derive-git = { git = "https://github.com/chipsalliance/caliptra-cfi.git", package = "caliptra-cfi-derive-git", rev = "9f315fcf11fe006e95e62149f54f98620e5244e7"}
caliptra_common = { path = "common", default-features = false }
caliptra-coverage = { path = "coverage" }
caliptra-builder = { path = "builder" }
caliptra-cpu = { path = "cpu" }
caliptra-drivers = { path = "drivers" }
caliptra-drivers-test-bin = { path = "drivers/test-fw" }
caliptra-emu-bus = { path = "sw-emulator/lib/bus" }
caliptra-emu-cpu = { path = "sw-emulator/lib/cpu" }
caliptra-emu-crypto = { path = "sw-emulator/lib/crypto" }
caliptra-emu-derive = { path = "sw-emulator/lib/derive" }
caliptra-emu-periph = { path = "sw-emulator/lib/periph" }
caliptra-emu-types = { path = "sw-emulator/lib/types" }
caliptra-error = { path = "error", default-features = false }
caliptra-fpga-boss = { path = "ci-tools/fpga-boss" }
caliptra-gen-linker-scripts = { path = "cpu/gen" }
caliptra-hw-model = { path = "hw-model" }
caliptra-hw-model-types = { path = "hw-model/types" }
caliptra-image-elf = { path = "image/elf" }
caliptra-image-fake-keys = { path = "image/fake-keys" }
caliptra-image-gen = { path = "image/gen" }
caliptra-image-openssl = { path = "image/openssl" }
caliptra-image-serde = { path = "image/serde" }
caliptra-image-types = { path = "image/types", default-features = false }
caliptra-image-verify = { path = "image/verify", default-features = false }
caliptra-kat = { path = "kat" }
caliptra-lms-types = { path = "lms-types" }
caliptra-registers = { path = "registers" }
caliptra-registers-1_0 = { path = "hw/1.0/registers" }
caliptra-registers-latest = { path = "hw/latest/registers" }
caliptra-runtime = { path = "runtime", default-features = false }
caliptra-systemrdl = { path = "systemrdl" }
caliptra-test = { path = "test" }
caliptra-test-harness = { path = "test-harness" }
caliptra-test-harness-types = { path = "test-harness/types" }
caliptra-verilated = { path = "hw/verilated",  features = ["verilator"] }
caliptra-x509 = { path = "x509", default-features = false }
cbc = "0.1.2"
cbindgen = { version = "0.24.0", default-features = false }
cfg-if = "1.0.0"
chrono = "0.4"
clap = { version = "3.2.14", default-features = false, features = ["std"] }
cms = "0.2.2"
convert_case = "0.6.0"
dpe = { path = "dpe/dpe", default-features = false, features = ["dpe_profile_p384_sha384"] }
crypto = { path = "dpe/crypto", default-features = false }
platform = { path = "dpe/platform", default-features = false }
elf = "0.7.2"
gdbstub = "0.6.3"
gdbstub_arch = "0.2.4"
getrandom = "0.2"
hex = "0.4.3"
lazy_static = "1.4.0"
libftdi1-sys = { version = "1.1.2", features = ["libusb1-sys"] }
libusb1-sys = "0.6.4"
memoffset = "0.8.0"
once_cell = "1.13"
openssl = { version = "0.10", features = ["vendored"] }
p384 = "0.11.2"
proc-macro2 = "1.0.66"
quote = "1.0"
rand = "0.8"
rfc6979 = "0.3.0"
rusb = "0.9.3"
serde = "1.0"
serde_derive = "1.0.136"
serde_json = "1.0"
sha2 = { version = "0.10.2", default-features = false, features = ["compress"] }
sha3 = "0.10.8"
smlang = "0.6.0"
syn = "1.0.107"
tinytemplate = "1.1"
tock-registers = { git = "https://github.com/tock/tock.git"}
toml = "0.7.0"
ufmt = { git = "https://github.com/korran/ufmt.git", rev = "1d0743c1ffffc68bc05ca8eeb81c166192863f33", features = ["inline"] }
uio = { version = "0.2.0" }
ureg = { path = "ureg" }
ureg-codegen = { path = "ureg/lib/codegen" }
ureg-schema = { path = "ureg/lib/schema" }
ureg-systemrdl = { path = "ureg/lib/systemrdl" }
wycheproof = "0.5.1"
x509-parser = "0.15.0"
zerocopy = "0.6.6"
serial_test = "2.0.0"
nix = "0.26.2"
libc = "0.2"
zeroize = { version = "1.6.0", default-features = false, features = ["zeroize_derive"] }
regex = "1.10.2"

[profile.firmware]
inherits = "release"
panic = "abort"
lto = true
opt-level = "s"
codegen-units = 1

# Always optimize the emulator during tests, as it is a major bottleneck for
# test speed.
[profile.test.package.caliptra-emu-bus]
opt-level = 3
[profile.test.package.caliptra-emu-cpu]
opt-level = 3
[profile.test.package.caliptra-emu-crypto]
opt-level = 3
[profile.test.package.caliptra-emu-periph]
opt-level = 3
[profile.test.package.caliptra-emu-types]
opt-level = 3
[profile.test.package.caliptra-hw-model]
opt-level = 3
[profile.test.package.tock-registers]
opt-level = 3
[profile.test.package.caliptra-drivers]
opt-level = 3
