# Licensed under the Apache-2.0 license

[package]
name = "caliptra-acvp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
totp-rs.workspace = true
