# Licensed under the Apache-2.0 license

[package]
name = "caliptra-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags.workspace = true
caliptra-error.workspace = true
zerocopy.workspace = true
caliptra-registers.workspace = true
caliptra-api-types.workspace = true
ureg.workspace = true
