# Licensed under the Apache-2.0 license

[package]
name = "caliptra-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.7.2"
caliptra-image-elf = { path = "../image/elf" }
caliptra-image-fake-keys = { path = "../image/fake-keys" }
caliptra-image-gen = { path = "../image/gen" }
caliptra-image-openssl = { path = "../image/openssl" }
caliptra-image-types = { path = "../image/types" }
hex = "0.4.3"
anyhow = "1.0.70"
once_cell = "1.13"
