# Licensed under the Apache-2.0 license

[package]
name = "caliptra-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
caliptra-image-elf.workspace= true
caliptra-image-fake-keys.workspace = true
caliptra-image-gen.workspace = true
caliptra-image-crypto.workspace = true
caliptra-image-types.workspace = true
clap.workspace = true
elf.workspace = true
hex.workspace = true
nix.workspace = true
once_cell.workspace = true
zerocopy.workspace = true

[features]
default = ["openssl"]
slow_tests = []
"hw-1.0" = []
openssl = ["caliptra-image-crypto/openssl"]
rustcrypto = ["caliptra-image-crypto/rustcrypto"]

[[bin]]
name = "image"
path = "bin/image_gen.rs"