# Licensed under the Apache-2.0 license
[package]
name = "caliptra_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield.workspace = true
bitflags.workspace = true
caliptra-cfi-lib.workspace = true
caliptra-cfi-derive.workspace = true
caliptra-cpu.workspace = true
caliptra-drivers.workspace = true
caliptra-error.workspace = true
caliptra-image-types = { workspace = true, default-features = false }
caliptra-image-verify.workspace = true
caliptra-api.workspace = true
caliptra-registers.workspace = true
memoffset.workspace = true
ufmt.workspace = true
zerocopy.workspace = true
zeroize.workspace = true
riscv.workspace = true
caliptra-x509 = { workspace = true, default-features = false }

[features]
default = ["std"]
emu = ["caliptra-drivers/emu"]
std = []
rom = ["caliptra-drivers/rom"]
fmc = []
runtime = []
no-cfi = []
