# Licensed under the Apache-2.0 license

[package]
name = "caliptra-coverage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
serde = {workspace = true, features = ["derive"]}
serde_json.workspace  = true
hex.workspace = true
rand.workspace = true
bit-vec = { workspace = true, features = ["serde"] }
caliptra-builder.workspace = true
elf.workspace = true

[lints]
workspace = true