# Licensed under the Apache-2.0 license

[package]
name = "caliptra-cpu"
version = "0.1.0"
edition = "2021"

[features]
# This feature is used to filter all these binary targets during normal builds
# (targets must be built with cargo arguments:
#     --target riscv32imc-unknown-none-elf \
#     --profile=firmware \
#     --features riscv
riscv = []
"hw-1.0" = ["caliptra-drivers/hw-1.0", "caliptra-registers/hw-1.0"]

[lib]
test = false
doctest = false
required-features = ["riscv"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caliptra-drivers.workspace = true
caliptra-registers.workspace = true
cfg-if.workspace = true

[build-dependencies]
