# Licensed under the Apache-2.0 license

[package]
name = "caliptra-drivers"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
bitfield.workspace = true
bitflags.workspace = true
caliptra-error = { workspace = true, default-features = false }
caliptra-image-types.workspace = true
caliptra-lms-types.workspace = true
caliptra-registers.workspace = true
cfg-if.workspace = true
dpe = { workspace = true, optional = true }
ufmt.workspace = true
ureg.workspace = true
zerocopy.workspace = true
zeroize.workspace = true
caliptra-cfi-lib = { workspace = true, default-features = false, features = ["cfi", "cfi-counter" ] }
caliptra-cfi-derive.workspace = true

[features]
emu = []
runtime = ["dep:dpe"]
fpga_realtime = ["caliptra-hw-model/fpga_realtime", "caliptra-builder/sha512_pcr_digest_workaround"]
itrng = ["caliptra-hw-model/itrng"]
verilator = ["caliptra-hw-model/verilator", "caliptra-builder/sha512_pcr_digest_workaround"]
no-cfi = []
sha512_pcr_digest_workaround = []

[dev-dependencies]
caliptra-builder.workspace = true
caliptra-drivers-test-bin.workspace = true
caliptra-hw-model-types.workspace = true
caliptra-hw-model.workspace = true
caliptra-test.workspace = true
openssl.workspace = true
