# Licensed under the Apache-2.0 license

[package]
name = "caliptra-drivers"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
bitfield.workspace = true
bitflags.workspace = true
caliptra-error = { workspace = true, default-features = false }
caliptra-image-types.workspace = true
caliptra-lms-types.workspace = true
caliptra-registers.workspace = true
cfg-if.workspace = true
dpe = { workspace = true, optional = true }
ufmt.workspace = true
ureg.workspace = true
zerocopy.workspace = true
zeroize.workspace = true
caliptra-cfi-lib = { workspace = true, default-features = false, features = ["cfi", "cfi-counter" ] }
caliptra-cfi-derive.workspace = true
caliptra-cfi-lib-git = { workspace = true, default-features = false, features = ["cfi", "cfi-counter" ], optional = true }
caliptra-cfi-derive-git = { workspace = true, optional = true }

[features]
emu = []
runtime = ["dep:dpe", "dep:caliptra-cfi-lib-git", "dep:caliptra-cfi-derive-git"]
fmc = []
fpga_realtime = ["caliptra-hw-model/fpga_realtime"]
itrng = ["caliptra-hw-model/itrng"]
verilator = ["caliptra-hw-model/verilator"]
no-cfi = []
hw-latest = ["caliptra-builder/hw-latest", "caliptra-registers/hw-latest"]

[dev-dependencies]
caliptra-builder.workspace = true
caliptra-drivers-test-bin.workspace = true
caliptra-hw-model-types.workspace = true
caliptra-hw-model.workspace = true
caliptra-test.workspace = true
openssl.workspace = true
