# Licensed under the Apache-2.0 license

[package]
name = "caliptra-drivers"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
arrayvec.workspace = true
bitfield.workspace = true
bitflags.workspace = true
caliptra-api.workspace = true
caliptra-error = { workspace = true, default-features = false }
caliptra-image-types.workspace = true
caliptra-lms-types.workspace = true
caliptra-okref.workspace = true
caliptra-auth-man-types.workspace = true
caliptra-registers.workspace = true
cfg-if.workspace = true
dpe = { workspace = true, optional = true }
ufmt.workspace = true
ureg.workspace = true
zerocopy.workspace = true
zeroize.workspace = true
caliptra-cfi-lib = { workspace = true, default-features = false, features = [
    "cfi",
    "cfi-counter",
] }
caliptra-cfi-derive.workspace = true

[features]
default = ["cfi"]
std = []
emu = []
riscv = []
rom = []
runtime = ["dep:dpe"]
fmc = []
fpga_realtime = ["caliptra-hw-model/fpga_realtime"]
fpga_subsystem = ["caliptra-hw-model/fpga_subsystem"]
ocp-lock = ["caliptra-hw-model/ocp-lock"]
itrng = ["caliptra-hw-model/itrng"]
verilator = ["caliptra-hw-model/verilator"]
cfi = []
fips-test-hooks = []

[dev-dependencies]
caliptra-api.workspace = true
caliptra-builder.workspace = true
caliptra-drivers-test-bin.workspace = true
caliptra-hw-model-types.workspace = true
caliptra-hw-model.workspace = true
caliptra-test.workspace = true
openssl.workspace = true
