# Licensed under the Apache-2.0 license
[package]
name = "caliptra-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caliptra-cfi-lib = { workspace = true, default-features = false, optional = true }

[features]
default = ["std"]
std = []
cfi = ["dep:caliptra-cfi-lib"]