# Licensed under the Apache-2.0 license

[package]
name = "caliptra-fmc"
version = "0.1.0"
edition = "2021"

[dependencies]
caliptra-cpu.workspace = true
caliptra-drivers.workspace = true
caliptra-error = { workspace = true, default-features = false }
caliptra-registers.workspace = true
caliptra-x509 = { workspace = true, default-features = false }
caliptra_common = { workspace = true, default-features = false }
caliptra-image-types = { workspace = true, default-features = false  }
ufmt.workspace = true
zerocopy.workspace = true

[build-dependencies]
cfg-if.workspace = true
caliptra-gen-linker-scripts.workspace = true
caliptra_common = { workspace = true, default-features = false }

[dev-dependencies]
caliptra-builder.workspace = true
caliptra-hw-model.workspace = true
caliptra-image-types.workspace = true

[features]
riscv = ["caliptra-cpu/riscv"]
default = ["std"]
std = ["ufmt/std", "caliptra_common/std"]
emu = ["caliptra_common/emu", "caliptra-drivers/emu"]
fpga_realtime = ["caliptra-drivers/fpga_realtime"]
