# Licensed under the Apache-2.0 license

[package]
name = "caliptra-fmc"
version = "0.1.0"
edition = "2021"

[dependencies]
caliptra_common = { workspace = true, default-features = false, features = ["fmc"] }
caliptra-cpu.workspace = true
caliptra-drivers = { workspace = true, features = ["fmc"] }
caliptra-error = { workspace = true, default-features = false }
caliptra-image-types = { workspace = true, default-features = false  }
caliptra-registers.workspace = true
caliptra-x509 = { workspace = true, default-features = false }
ufmt.workspace = true
zerocopy.workspace = true
caliptra-cfi-lib = { workspace = true, default-features = false, features = ["cfi", "cfi-counter" ] }
caliptra-cfi-derive.workspace = true


[build-dependencies]
caliptra_common = { workspace = true, default-features = false }
caliptra-gen-linker-scripts.workspace = true
cfg-if.workspace = true

[dev-dependencies]
caliptra-builder.workspace = true
caliptra-hw-model.workspace = true
caliptra-test.workspace = true
caliptra-image-types.workspace = true
openssl.workspace = true

[features]
default = ["std"]
emu = ["caliptra_common/emu", "caliptra-drivers/emu"]
riscv = ["caliptra-cpu/riscv"]
std = ["ufmt/std", "caliptra_common/std"]
fpga_realtime = ["caliptra-hw-model/fpga_realtime"]
itrng = ["caliptra-hw-model/itrng"]
verilator = ["caliptra-hw-model/verilator"]
fake-fmc = []
"hw-1.0" = ["caliptra-builder/hw-1.0", "caliptra-cpu/hw-1.0", "caliptra-drivers/hw-1.0", "caliptra-registers/hw-1.0"]
