# Licensed under the Apache-2.0 license

[package]
name = "caliptra-fmc"
version = "0.1.0"
edition = "2021"

[dependencies]
caliptra_common = { workspace = true, default-features = false, features = ["fmc"] }
caliptra-cpu.workspace = true
caliptra-drivers = { workspace = true, features = ["fmc"] }
caliptra-error = { workspace = true, default-features = false }
caliptra-image-types = { workspace = true, default-features = false  }
caliptra-registers.workspace = true
caliptra-x509 = { workspace = true, default-features = false }
ufmt.workspace = true
zerocopy.workspace = true
caliptra-cfi-lib = { workspace = true, default-features = false, features = ["cfi", "cfi-counter" ] }
caliptra-cfi-derive.workspace = true
zeroize.workspace = true


[build-dependencies]
caliptra_common = { workspace = true, default-features = false }
caliptra-gen-linker-scripts.workspace = true
cfg-if.workspace = true

[dev-dependencies]
caliptra-api.workspace = true
caliptra-auth-man-gen.workspace = true
caliptra-builder.workspace = true
caliptra-hw-model.workspace = true
caliptra-image-types = { workspace = true, default-features = false }
caliptra-image-crypto.workspace = true
caliptra-test.workspace = true
openssl.workspace = true

[features]
default = ["std"]
emu = ["caliptra_common/emu", "caliptra-drivers/emu"]
fake-fmc = []
fpga_realtime = ["caliptra-drivers/fpga_realtime", "caliptra-hw-model/fpga_realtime"]
fpga_subsystem = ["caliptra-drivers/fpga_subsystem", "caliptra-hw-model/fpga_subsystem"]
itrng = ["caliptra-hw-model/itrng"]
no-cfi = ["caliptra-drivers/no-cfi"]
riscv = ["caliptra-cpu/riscv"]
std = ["ufmt/std", "caliptra_common/std", "caliptra-drivers/std", "caliptra-cpu/std"]
verilator = ["caliptra-hw-model/verilator"]
