# Licensed under the Apache-2.0 license

[package]
name = "caliptra-hw-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["coverage"]
verilator = ["dep:caliptra-verilated"]
fpga_realtime = ["dep:uio"]
itrng = ["caliptra-verilated?/itrng"]
coverage = ["dep:caliptra-coverage"]
"hw-1.0" = ["caliptra-emu-periph/hw-1.0"]

[dependencies]
bitfield.workspace = true
bit-vec.workspace = true
caliptra-emu-bus.workspace = true
caliptra-emu-cpu.workspace = true
caliptra-emu-periph.workspace = true
caliptra-emu-types.workspace = true
caliptra-hw-model-types.workspace = true
caliptra-api.workspace = true
caliptra-registers.workspace = true
caliptra-verilated = { workspace = true, optional = true }
rand.workspace = true
sha2.workspace = true
uio = { workspace = true, optional = true }
ureg.workspace = true
zerocopy.workspace = true
nix.workspace = true
libc.workspace = true
caliptra-coverage = { workspace = true, optional = true }
caliptra-image-types.workspace = true

[dev-dependencies]
caliptra-builder.workspace = true
caliptra-registers.workspace = true
caliptra-test-harness-types.workspace = true
