# Licensed under the Apache-2.0 license

[package]
name = "caliptra-hw-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["coverage"]
verilator = ["dep:caliptra-verilated"]
fpga_realtime = ["dep:uio"]
fpga_subsystem  = ["dep:uio"]
itrng = ["caliptra-verilated?/itrng"]
coverage = ["dep:caliptra-coverage"]
# Defaults `InitParams` to enable OCP LOCK.
ocp-lock = []

[dependencies]
anyhow.workspace = true
bitfield.workspace = true
bitflags.workspace = true
bit-vec.workspace = true
caliptra-api-types.workspace = true
caliptra_common.workspace = true
caliptra-emu-bus.workspace = true
caliptra-emu-cpu.workspace = true
caliptra-emu-periph.workspace = true
caliptra-emu-types.workspace = true
caliptra-hw-model-types.workspace = true
caliptra-api.workspace = true
caliptra-registers.workspace = true
caliptra-image-fake-keys.workspace = true
caliptra-verilated = { workspace = true, optional = true }
once_cell.workspace = true
rand.workspace = true
regex.workspace = true
rustix.workspace = true
scopeguard.workspace = true
serde.workspace = true
sha2.workspace = true
sha3.workspace = true
smlang.workspace = true
thiserror.workspace = true
uio = { workspace = true, optional = true }
ureg.workspace = true
zerocopy.workspace = true
nix.workspace = true
libc.workspace = true
caliptra-coverage = { workspace = true, optional = true }
caliptra-image-types.workspace = true
tock-registers.workspace = true

[dev-dependencies]
caliptra-builder.workspace = true
caliptra-registers.workspace = true
caliptra-test-harness-types.workspace = true
nix.workspace = true

[[bin]]
name = "fpga_realtime_mbox_pauser"
path = "src/bin/fpga_realtime_mbox_pauser.rs"
required-features = ["fpga_realtime"]
