# Licensed under the Apache-2.0 license

[package]
name = "caliptra-hw-model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["coverage", "platform-specific"]
verilator = ["dep:caliptra-verilated", "platform-specific"]
fpga_realtime = ["dep:uio", "platform-specific"]
fpga_subsystem  = ["dep:uio", "platform-specific"]
itrng = ["caliptra-verilated?/itrng"]
coverage = ["dep:caliptra-coverage"]
# Defaults `InitParams` to enable OCP LOCK.
ocp-lock = []
# Platform-specific deps (nix, libc, rustix, regex) needed for openocd, FPGA, etc.
# Disable for wasm32 builds.
platform-specific = ["dep:nix", "dep:libc", "dep:rustix", "dep:regex"]

[dependencies]
anyhow.workspace = true
bitfield.workspace = true
bitflags.workspace = true
bit-vec.workspace = true
caliptra-api-types.workspace = true
caliptra-emu-bus.workspace = true
caliptra-emu-cpu.workspace = true
caliptra-emu-periph.workspace = true
caliptra-emu-types.workspace = true
caliptra-hw-model-types.workspace = true
caliptra-api.workspace = true
caliptra-registers.workspace = true
caliptra-image-fake-keys.workspace = true
caliptra-verilated = { workspace = true, optional = true }
once_cell.workspace = true
rand.workspace = true
regex = { workspace = true, optional = true }
rustix = { workspace = true, optional = true }
scopeguard.workspace = true
serde = {workspace = true, features = ['derive']}
sha2.workspace = true
sha3.workspace = true
smlang.workspace = true
thiserror.workspace = true
uio = { workspace = true, optional = true }
ureg.workspace = true
zerocopy.workspace = true
nix = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
caliptra-coverage = { workspace = true, optional = true }
caliptra-image-types.workspace = true
tock-registers.workspace = true

[dev-dependencies]
caliptra-builder.workspace = true
caliptra-registers.workspace = true
caliptra-test-harness-types.workspace = true
nix.workspace = true

[[bin]]
name = "fpga_realtime_mbox_pauser"
path = "src/bin/fpga_realtime_mbox_pauser.rs"
required-features = ["fpga_realtime"]
