# Licensed under the Apache-2.0 license

[package]
name = "caliptra-kat"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
caliptra-drivers.workspace = true
caliptra-lms-types.workspace = true
zerocopy.workspace = true
ufmt.workspace = true

[features]
"hw-1.0" = ["caliptra-drivers/hw-1.0"]
