# Licensed under the Apache-2.0 license

[package]
name = "caliptra-kat"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

[features]
default = []
# When building for ROM, use AesGcm for the GCM and CMAC-KDF KATs.
rom = ["caliptra-drivers/rom"]
fips-test-hooks = ["caliptra-drivers/fips-test-hooks"]

[dependencies]
caliptra-drivers.workspace = true
caliptra-registers.workspace = true
caliptra-lms-types.workspace = true
zerocopy.workspace = true
ufmt.workspace = true
