# Licensed under the Apache-2.0 license

[package]
name = "caliptra-lms-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { workspace = true, optional = true }
zerocopy.workspace = true
