# Licensed under the Apache-2.0 license.

[package]
name = "caliptra-registers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caliptra-registers-1_0 = { workspace = true, optional = true }
caliptra-registers-latest = { workspace = true }

[features]
"hw-1.0" = ["dep:caliptra-registers-1_0"]
