# Licensed under the Apache-2.0 license.

[package]
name = "caliptra-registers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caliptra-registers-latest = { workspace = true, optional = true }
caliptra-registers-rev-2-1 = { workspace = true, optional = true }
mutually_exclusive_features = "0.1.0"

[features]
default = ["rev-latest"]
rev-latest = ["dep:caliptra-registers-latest"]
rev-2_0 = []
rev-2_1 = ["dep:caliptra-registers-rev-2-1"]
