# Licensed under the Apache-2.0 license.

[package]
name = "caliptra-registers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
caliptra-registers-latest = { workspace = true }
caliptra-registers-rev-2-1 = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(hw_rev, values("latest", "2.0", "2.1"))']}

