# Licensed under the Apache-2.0 license

[package]
name = "caliptra-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
caliptra-cfi-lib = { workspace = true, default-features = false, features = ["cfi", "cfi-counter" ] }
caliptra-cfi-derive.workspace = true
caliptra_common = { workspace = true, default-features = false, features = ["runtime"] }
caliptra-cpu.workspace = true
caliptra-drivers = { workspace = true, features = ["runtime"] }
caliptra-error = { workspace = true, default-features = false, features = ["cfi"] }
caliptra-image-types = { workspace = true, default-features = false }
caliptra-kat.workspace = true
caliptra-registers.workspace = true
caliptra-x509 = { workspace = true, default-features = false }
dpe.workspace = true
crypto.workspace = true
platform.workspace = true
ufmt.workspace = true
zerocopy.workspace = true
arrayvec.workspace = true
caliptra-image-verify = { workspace = true, default-features = false }
zeroize.workspace = true

[build-dependencies]
caliptra_common = { workspace = true, default-features = false }
caliptra-gen-linker-scripts.workspace = true
cfg-if.workspace = true

[dev-dependencies]
caliptra-builder.workspace = true
caliptra-hw-model.workspace = true
caliptra-image-elf.workspace = true
caliptra-image-fake-keys.workspace = true
caliptra-image-gen.workspace = true
caliptra-image-openssl.workspace = true
caliptra-image-serde.workspace = true
caliptra-cfi-lib = { workspace = true, features = ["cfi-test"] }
openssl.workspace = true
sha2 = { version = "0.10.2", default-features = false, features = ["compress"] }
cms.workspace = true
wycheproof.workspace = true

[features]
default = ["std", "test_only_commands"]
emu = ["caliptra_common/emu", "caliptra-drivers/emu"]
itrng = ["caliptra-hw-model/itrng"]
riscv = ["caliptra-cpu/riscv"]
std = ["ufmt/std", "caliptra_common/std"]
test_only_commands = ["caliptra_common/test_only_commands"]
slow_tests = []
verilator = ["caliptra-hw-model/verilator"]
fips_self_test=[]
no-cfi = ["caliptra-image-verify/no-cfi", "caliptra-drivers/no-cfi"]
fpga_realtime = ["caliptra-drivers/fpga_realtime"]
